base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 192.168.40.1
      enableServiceLinks: true
      containers:
        - name: homepage
          image: "ghcr.io/gethomepage/homepage:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: homepage-config
              mountPath: /app/config
            - name: logs
              mountPath: /app/config/logs
            - name: homepage-icons
              mountPath: /app/public/icons
            - name: homepage-images
              mountPath: /app/public/images
      volumes:
        - configMap:
            name: homepage-config
          name: homepage-config
        - name: logs
          emptyDir:
            {}
        - name: homepage-icons
          persistentVolumeClaim:
            claimName: homepage-icons-pvc
        - name: homepage-images
          persistentVolumeClaim:
            claimName: homepage-images-pvc
