base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
