base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dash.hl.ancalagon.black`)
      priority: 10
      services:
        - name: homepage
          port: 80
  tls:
    certResolver: default
